Render/compiling_error.txt
In file included from D:\ITB\Semester 4\Kelas Kuliah\Object Oriented Programming\Tugas Besar 1A\Engi-s-Farm\Render\Facility.hpp:10:0:
d:\itb\semester 4\kelas kuliah\object oriented programming\tugas besar 1a\engi-s-farm\player.hpp:8:14: error: 'Product' was not declared in this scope
   LinkedList<Product> bag; // List yang menyimpan produk yang dihasilkan dari hewan
              ^~~~~~~
d:\itb\semester 4\kelas kuliah\object oriented programming\tugas besar 1a\engi-s-farm\player.hpp:8:21: error: template argument 1 is invalid
   LinkedList<Product> bag; // List yang menyimpan produk yang dihasilkan dari hewan
                     ^
d:\itb\semester 4\kelas kuliah\object oriented programming\tugas besar 1a\engi-s-farm\player.hpp:15:3: error: 'Product' does not name a type
   Product getBag(int idx) const; ////mengambil Product yang ada dalam LinkedList Bag pada indeks idx
   ^~~~~~~
In file included from D:\ITB\Semester 4\Kelas Kuliah\Object Oriented Programming\Tugas Besar 1A\Engi-s-Farm\Render\Facility.hpp:10:0:
d:\itb\semester 4\kelas kuliah\object oriented programming\tugas besar 1a\engi-s-farm\player.hpp:27:15: error: 'Product' has not been declared
   void addBag(Product Prod); //Menambahkan Product Prod ke Bag dan ditaruh di paling belakang
               ^~~~~~~
